--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/Xray-docs-next/assets/style.c2c858a3.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>Looks like we&#39;ve got some broken links.</blockquote><a href="/Xray-docs-next/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>How did we get here?</blockquote><a href="/Xray-docs-next/" class="">Take me home</a></div></div><!----><!--]--></div>
     <script type="module" src="/Xray-docs-next/assets/app.66cd4dc7.js" defer></script>
   </body>
 </html>
